feat: integrated hashnode api to show my articles

--- a/blogs.html
+++ b/blogs.html
@@ -18,5 +18,7 @@
         </li>
       </ul>
     </nav>
+    <div class="app"></div>
+    <script type="text/javascript" id="articles" src="./blogs.js"></script>
   </body>
 </html>
