feat: lazy loading added to blog cover images

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
           <h2>My Blogs</h2>
           <p>
             As a web developer, I learnt that staying up-to-date with the latest
-            industry trends and best practices is really important. That's why I
-            try to write and share my learnings through my blog. I am not an
-            expert in writing blogs, but do check them out and give me feedback
-            if any.
+            industry trends and best practices is really important. So as I keep
+            learning, I try to write and share my learnings through my blog. I
+            am not an expert in writing blogs, but do check them out and give me
+            feedback if any.
           </p>
           <button class="button button-secondary">
             <a href="/" class="link-secondary">Read Blogs</a>
