feat: added cuisine app built with react

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,55 @@
     <section class="container container-center">
       <ol reversed>
         <li>
+          <h2>Cuisine App - ReactJS</h2>
+          <p>
+            A cusine listing app built with<strong>ReactJS</strong>
+            ..
+          </p>
+          <button class="button button-primary">
+            <a
+              href="https://xz4f4h.csb.app/"
+              class="link-primary"
+              target="_blank"
+              >Open App</a
+            >
+          </button>
+          <button class="button button-secondary">
+            <a
+              href="https://codesandbox.io/s/cuisine-react-app-xz4f4h?file=/src/App.js"
+              class="link-secondary"
+              target="_blank"
+              >View Source Code</a
+            >
+          </button>
+        </li>
+        <li>
+          <h2>Minion Translator App</h2>
+          <p>
+            English to Minion translation app built with<strong
+              >Javascript</strong
+            >
+            using <strong>API</strong>. Go to the app and start speaking like
+            minions for fun.
+          </p>
+          <button class="button button-primary">
+            <a
+              href="https://banana-miniontranslator.netlify.app/"
+              class="link-primary"
+              target="_blank"
+              >Open App</a
+            >
+          </button>
+          <button class="button button-secondary">
+            <a
+              href="https://github.com/Nairitya/bananaTranslatorApp-MarkSix-NeoG"
+              class="link-secondary"
+              target="_blank"
+              >View Source Code</a
+            >
+          </button>
+        </li>
+        <li>
           <h2>DC fan?</h2>
           <p>
             A Fun CLI app built with <strong>nodeJS</strong>. Take the quiz or
