feat:added emoji finder app in projects section

--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,26 @@
           </button>
         </li>
         <li>
+          <h2>Emoji Meaning App - ReactJS</h2>
+          <p>A <strong>ReactJS</strong> app to find the meaning of emojis.</p>
+          <button class="button button-primary">
+            <a
+              href="https://s6nve0.csb.app/"
+              class="link-primary"
+              target="_blank"
+              >Open App</a
+            >
+          </button>
+          <button class="button button-secondary">
+            <a
+              href="https://codesandbox.io/s/emoji-meaning-react-app-s6nve0?file=/src/App.js"
+              class="link-secondary"
+              target="_blank"
+              >View Source Code</a
+            >
+          </button>
+        </li>
+        <li>
           <h2>Minion Translator App</h2>
           <p>
             English to Minion translation app built with<strong
