feat: added wakanda translation project

--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,32 @@
           </button>
         </li>
         <li>
+          <h2>Wakanda Translator App</h2>
+          <p>
+            English to Wakanda translation app built with<strong
+              >Javascript</strong
+            >
+            using <strong>API</strong>. Go to the app and start speaking like
+            Black Panther.
+          </p>
+          <button class="button button-primary">
+            <a
+              href="https://wakanda-translator-neog.netlify.app"
+              class="link-primary"
+              target="_blank"
+              >Open App</a
+            >
+          </button>
+          <button class="button button-secondary">
+            <a
+              href="https://github.com/Nairitya/wakandaTranslatorApp-MarkSix-NeoG"
+              class="link-secondary"
+              target="_blank"
+              >View Source Code</a
+            >
+          </button>
+        </li>
+        <li>
           <h2>Minion Translator App</h2>
           <p>
             English to Minion translation app built with<strong
