fix: added github repo for cuisine and emoji app

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
           </button>
           <button class="button button-secondary">
             <a
-              href="https://codesandbox.io/s/cuisine-react-app-xz4f4h?file=/src/App.js"
+              href="https://github.com/Nairitya/cuisine-react-app-neog"
               class="link-secondary"
               target="_blank"
               >View Source Code</a
@@ -61,7 +61,7 @@
           </button>
           <button class="button button-secondary">
             <a
-              href="https://codesandbox.io/s/emoji-meaning-react-app-s6nve0?file=/src/App.js"
+              href="https://github.com/Nairitya/emoji-meaning-react-app"
               class="link-secondary"
               target="_blank"
               >View Source Code</a
